@@ -1,46 +1,44 @@
 ---
 fixtures:
   repositories:
-    auditd: https://github.com/simp/pupmod-simp-auditd
+    auditd: https://github.com/simp/pupmod-simp-auditd.git
     augeas_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core
+      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
       puppet_version: ">= 6.0.0"
-    augeasproviders_core: https://github.com/simp/augeasproviders_core
-    augeasproviders_grub: https://github.com/simp/augeasproviders_grub
-    augeasproviders_puppet: https://github.com/simp/augeasproviders_puppet
+    augeasproviders_core: https://github.com/simp/augeasproviders_core.git
+    augeasproviders_grub: https://github.com/simp/augeasproviders_grub.git
+    augeasproviders_puppet: https://github.com/simp/augeasproviders_puppet.git
     cron_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-cron_core
+      repo: https://github.com/simp/pupmod-puppetlabs-cron_core.git
       puppet_version: ">= 6.0.0"
-    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld
-    haveged: https://github.com/simp/pupmod-simp-haveged
-    inifile: https://github.com/simp/puppetlabs-inifile
-    iptables: https://github.com/simp/pupmod-simp-iptables
+    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld.git
+    haveged: https://github.com/simp/pupmod-simp-haveged.git
+    inifile: https://github.com/simp/puppetlabs-inifile.git
+    iptables: https://github.com/simp/pupmod-simp-iptables.git
     selinux_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-selinux_core
+      repo: https://github.com/simp/pupmod-puppetlabs-selinux_core.git
       puppet_version: ">= 6.0.0"
-    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
-    concat: https://github.com/simp/puppetlabs-concat
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
+    concat: https://github.com/simp/puppetlabs-concat.git
     hocon:
-      repo: https://github.com/puppetlabs/puppetlabs-hocon
-      ref: "v1.1.0"
-    logrotate: https://github.com/simp/pupmod-simp-logrotate
-    pki: https://github.com/simp/pupmod-simp-pki
-    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
-    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
-    systemd: https://github.com/simp/puppet-systemd
-    pam: https://github.com/simp/pupmod-simp-pam
+      repo: https://github.com/puppetlabs/puppetlabs-hocon.git
+      ref: v1.1.0
+    logrotate: https://github.com/simp/pupmod-simp-logrotate.git
+    pki: https://github.com/simp/pupmod-simp-pki.git
+    rsyslog: https://github.com/simp/pupmod-simp-rsyslog.git
+    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld.git
+    simp_options: https://github.com/simp/pupmod-simp-simp_options.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
+    systemd: https://github.com/simp/puppet-systemd.git
+    pam: https://github.com/simp/pupmod-simp-pam.git
     puppet_enterprise:
-      repo: https://github.com/simp/pupmod-mock-puppet_enterprise
+      repo: https://github.com/simp/pupmod-mock-puppet_enterprise.git
       ref: 0.3.0
     puppet_authorization:
-      repo: https://github.com/simp/puppetlabs-puppet_authorization
+      repo: https://github.com/simp/puppetlabs-puppet_authorization.git
       ref: 0.5.1
-
-    # Fixtures needed for the acceptance test
-    augeasproviders_ssh: https://github.com/simp/augeasproviders_ssh
-    sudo: https://github.com/simp/pupmod-simp-sudo
+    augeasproviders_ssh: https://github.com/simp/augeasproviders_ssh.git
+    sudo: https://github.com/simp/pupmod-simp-sudo.git
   symlinks:
     pupmod: "#{source_dir}"
